WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185653
Fix crash after a Worker terminates but there are still IDB transactions the server is trying to open for it
https://bugs.webkit.org/show_bug.cgi?id=185653
Summary
Fix crash after a Worker terminates but there are still IDB transactions the ...
Brady Eidson
Reported
2018-05-15 11:08:15 PDT
Fix crash after a Worker terminates but there are still IDB transactions the server is trying to open for it <
rdar://problem/33744241
>
Attachments
Patch
(5.54 KB, patch)
2018-05-15 11:11 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
Patch
(6.11 KB, patch)
2018-05-15 11:29 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2018-05-15 11:11:31 PDT
Created
attachment 340421
[details]
Patch
Andy Estes
Comment 2
2018-05-15 11:26:14 PDT
Comment on
attachment 340421
[details]
Patch missing an expected result. r=me otherwise.
Brady Eidson
Comment 3
2018-05-15 11:29:18 PDT
Created
attachment 340422
[details]
Patch
WebKit Commit Bot
Comment 4
2018-05-15 12:07:18 PDT
Comment on
attachment 340422
[details]
Patch Clearing flags on attachment: 340422 Committed
r231812
: <
https://trac.webkit.org/changeset/231812
>
WebKit Commit Bot
Comment 5
2018-05-15 12:07:20 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6
2018-08-21 15:33:03 PDT
***
Bug 188796
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug